Added functions to read canister metadata